public/styles/animations.css
.ship__container img {
  height: 60px;
  animation: blast-off 1.5s cubic-bezier(1, 0.06, 1, 0.9) forwards;
}

@keyframes blast-off {
  0% {
    height: 0px;
    transform: translate(-30px, 300px);
  }
  100% {
    height: 600px;
    transform: translate(500px, -1100px);
  }
}

.hypno-toad__container {
    height: .1px;
}

.hypno-toad__container img {
  position: fixed;
}

.hypno-toad__container .hypno-toad-1 {
  transform: translate(-105px, -500px);
  animation: toad 1s ease-in-out forwards;
}

.hypno-toad-1 img {
  height: 50px;
  transform: translate(10px, -50px);
  animation: toad 1s ease-in-out forwards;
}

.hypno-toad__container .hypno-toad-2 {
  font-size: 2rem;
  transform: translate(100px, -275px);
  animation: toad 500ms ease-in-out 1000ms forwards;
}

.hypno-toad-2 img {
  transform: translate(10px, 40px);
  height: 200px;
  animation: toad 500ms ease-in-out 1000ms forwards;
}

.hypno-toad__container .hypno-toad-3 {
  font-size: 2rem;
  transform: translate(-100px, -20px);
  animation: toad 1500ms ease-in-out 100ms forwards;
}

.hypno-toad-3 img {
  height: 100px;
  transform: translate(-160px, 40px);
  animation: toad 1500ms ease-in-out 100ms forwards;
}

@keyframes toad {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

